--- a/index.html
+++ b/index.html
@@ -1,30 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML</title>
-    <style>
-      h1 {
-        font-size: 65px;
-        color: orange;
-      }
 
-      ul {
-        background-color: tomato;
-      }
+<head>
+  <meta charset="UTF-8">
+  <title>HTML</title>
+  <style>
+    h1 {
+      font-size: 65px;
+      color: orange;
+      font-family: sans-serif, Helvetica;
+    }
 
-      .cor-de-fundo {
-        background-color: red];
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Frutas</h1>
-    <p class="cor-de-fundo">Qual é a sua fruta favorita?</p>
-    <ul class="cor-de-fundo">
-      <li>Maçã</li>
-      <li>Banana</li>
-      <li>Goiaba</li>
-    </ul>
-  </body>
+    p {
+      font-weight: 600;
+    }
+
+    body {
+      font-size: 16px;
+    }
+
+    p {
+      font-size: 3em;
+    }
+
+    li {
+      background-color: tomato;
+      font-style: italic;
+      line-height: 60px;
+      text-align: center;
+      text-decoration: underline;
+      font-size: 2em;
+    }
+
+    .cor-de-fundo {
+      background-color: purple];
+    }
+
+    #Maca {
+      background-color: red;
+    }
+
+    #Banana {
+      background-color: yellow;
+    }
+
+    #Goiaba {
+      background-color: greenyellow;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Frutas</h1>
+  <p class="cor-de-fundo">Qual é a sua fruta favorita?</p>
+  <ul class="cor-de-fundo">
+    <li id="Maca">Maçã</li>
+    <li id="Banana">Banana</li>
+    <li id="Goiaba">Goiaba</li>
+  </ul>
+</body>
+
 </html>
